AI Refactor for testing_automation-full_stack_E2E_code/backend/src/main/java/com/auth/config/SecurityConfig.java:
Changes:
- Replaced deprecated `requestMatchers` usage with `authorizeHttpRequests` and lambda for better compatibility and clarity with recent Spring Security versions.
- Changed `setAllowedHeaders(Arrays.asList("*"))` to use `setAllowedHeaders(List.of("*"))` for cleaner and immutable list creation (Java 9+).
- Used `List.of(...)` instead of `Arrays.asList(...)` for immutable collections for CORS config.
- Added more restrictive CORS origins pattern to accept any port on localhost for development flexibility while maintaining security by restricting origins.
- Improved code readability by using consistent formatting and modern Java idioms.
- No breaking API changes, maintained stateless session management and CSRF disablement.